# bot4.1

./: .env.example  LICENSE  README.md  pyproject.toml
docs/: phase2_operational_spec.md
src/trade_engine/: __init__.py  config.py  db.py  journal.py  main.py  models.py  orchestrator.py
src/trade_engine/ai/: gating.py
src/trade_engine/dashboard/: layouts.py
src/trade_engine/data/: hub.py  ibkr_client.py
src/trade_engine/data/feeds/: finnhub.py  ibkr.py
src/trade_engine/execution/: executor.py  trade_manager.py
src/trade_engine/orchestrator/: intraday.py  service.py
src/trade_engine/risk/: manager.py
src/trade_engine/storage/migrations/: 0010_phase2.sql
src/trade_engine/strategy/: engine.py  features_intraday.py  propulsion.py
src/trade_engine/tools/: seed_watchlist.py
trade_engine/: journal.py  models.py
trade_engine/ai/: gating.py
trade_engine/data/: catalyst_client.py  ibkr_client.py
trade_engine/data/feeds/: __init__.py  yahoo_rss.py
trade_engine/features/: feature_engine.py
trade_engine/orchestrator/: __init__.py
trade_engine/strategy/: engine.py
trade_engine/tools/: export.py  market_clock.py
